--- a/genindex.html
+++ b/genindex.html
@@ -288,12 +288,14 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.shim.read_bore">read_bore() (in module pygef.shim)</a>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.raw_headers">raw_headers (pygef.cpt.CPTData attribute)</a>
 </li>
-      <li><a href="tree/reference.html#pygef.shim.read_cpt">read_cpt() (in module pygef.shim)</a>
+      <li><a href="tree/reference.html#pygef.shim.read_bore">read_bore() (in module pygef.shim)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.shim.read_cpt">read_cpt() (in module pygef.shim)</a>
+</li>
       <li><a href="tree/reference.html#pygef.bore.BoreData.research_report_date">research_report_date (pygef.bore.BoreData attribute)</a>
 
       <ul>
